Try to fix native build